# AdbGUI

./: README.md  app.adb.gui.json  io.github.Alastt28.AdbGUI.json  meson.build  org.adb.gui.json
data/: app.adb.gui.desktop.in  app.adb.gui.gschema.xml  app.adb.gui.metainfo.xml.in  app.adb.gui.service.in  io.github.Alastt28.AdbGUI.desktop.in  io.github.Alastt28.AdbGUI.gschema.xml  io.github.Alastt28.AdbGUI.metainfo.xml.in  io.github.Alastt28.AdbGUI.service.in  meson.build  org.adb.gui.desktop.in  org.adb.gui.gschema.xml  org.adb.gui.metainfo.xml.in  org.adb.gui.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: app.adb.gui.gresource.xml  app.adb.gui.in  app_row.blp  io.github.Alastt28.AdbGUI.gresource.xml  io.github.Alastt28.AdbGUI.in  main.py  meson.build  org.adb.gui.gresource.xml  org.adb.gui.in  window.blp  window.py
src/bridge/: settings.gradle.kts
src/bridge/app/: build.gradle.kts
src/bridge/app/src/main/: AndroidManifest.xml
src/bridge/app/src/main/java/com/adbgui/bridge/: BridgeProvider.java
src/bridge/gradle/wrapper/: gradle-wrapper.properties
